# intelligent-llm-router

./: .env.example  .gitignore  README.md  Untitled.ipynb  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: evaluate.py  predict.py  train.py
src/llm_router/: __init__.py
src/llm_router/data/: loading.py
src/llm_router/evaluation/: __init__.py  metrics.py
src/llm_router/inference/: __init__.py  predict.py
src/llm_router/models/: __init__.py  router.py
src/llm_router/training/: __init__.py  train.py
